[add] exam service crud and mongodb connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=examinationdb
 server.port=8081
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.database=examination_db
+spring.data.mongodb.uri=mongodb+srv://admin:Admin22@hos.3q5a35y.mongodb.net/examination_db?retryWrites=true&w=majority&appName=HOs
